--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,14 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev" : "nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^1.3.0",
     "express": "^4.15.3",
+    "mongoose": "^4.11.6",
     "passport": "^0.3.2",
     "passport-google-oauth20": "^1.0.0"
   }
